--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <div autocomplete="off" class="form sign-in-form">
               <div class="logo">
                 <img src="img/logo2.png" alt="PREPnancy" />
-                <!-- <h4>PREPnancy</h4> -->
               </div>
 
               <div class="heading">
                 <h2>Welcome Back</h2>
-                <h6>Not registred yet?</h6>
+                <h6>Not registered yet?</h6>
                 <a href="#" class="toggle">Sign up</a>
               </div>
 
