--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
               <div class="heading">
                 <h2>Welcome Back</h2>
-                <h6>Not registred yet?</h6>
+                <h6>Not registered yet?</h6>
                 <a href="#" class="toggle">Sign up</a>
               </div>
 
@@ -161,9 +161,9 @@
             <div class="text-slider">
               <div class="text-wrap">
                 <div class="text-group">
-                  <h2>Create your own appointments</h2>
-                  <h2>View the trend among mummies</h2>
-                  <h2>Get real medical information</h2>
+                  <h2>Keep track of your own appointments</h2>
+                  <h2>View product recommendations</h2>
+                  <h2>Get medical information</h2>
                 </div>
               </div>
 
