--- a/bulletin/bulletin.html
+++ b/bulletin/bulletin.html
@@ -40,7 +40,7 @@
       <!-- <div class="body"> -->
           <div class="textbox1" style="text-align:center;">
                 <h1 style="margin-top:5vh;">Share with our community</h1>
-                <p style="font-family: 'Mulish', sans-serif;">Contribute to our community by participating in our polls and recommending your favourite products. </p>
+                <p style=" margin-right: 20px;margin-left: 20px;font-family: 'Mulish', sans-serif;">Contribute to our community by participating in our polls and recommending your favourite products. </p>
                 <button type="button" class="button"><a href="bulletinresult.html" style="color:white; text-decoration:none; margin-bottom:10vh; font-family: 'Mulish', sans-serif; font-weight:bold;">Poll Results</a></button>
           </div>
           <div class="container-fluid" id="app">
