start image styling

--- a/bulletin/bulletin.html
+++ b/bulletin/bulletin.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="card1 card col-3" style=" height:300px;">
                         <div class="content">
-                            <h2 class="title">Pram</h2>
+                            <h2 class="title">Pram &nbsp</h2>
                             <button class="btnn" onclick="choosing('prams')">take a poll</button>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="card2 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
-                            <h2 class="title">Vitamins</h2>
+                            <h2 class="title">Vitamins &nbsp</h2>
                             <button class="btnn" onclick="choosing('vitamins')">take a poll</button>
                         </div>
                     </div>                
