--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <div class="backgroundpic">
+    <div class="backgroundpic" style="overflow:hidden">
       <nav class="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="/homepage.html">
