--- a/homepage.html
+++ b/homepage.html
@@ -46,7 +46,7 @@
                 </li>
               </ul>
       </nav>
-      <div style="background-color: ;" id="overlay" class="cover blur-in"> 
+      <div id="overlay" class="cover blur-in"> 
         <div class="container-fluid content">
           <div class="row">
             <h2 class="profile animate__animated animate__fadeOut animate__delay-5s" style="color:rgb(163, 116, 116)">Welcome</h2>
