--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -38,8 +38,10 @@
       </nav>
 
 
-      <div id="container-fluid" style="margin-left:10vh; margin-right:10vh; margin-bottom: 10vh;margin-top: 3vh;">
-        <!-- (A) PERIOD SELECTOR -->
+      <div class="container-fluid" style="margin-bottom: 10vh;margin-top: 3vh;">
+        <div class="row">
+          <div class="col-11 mx-auto">
+            <!-- (A) PERIOD SELECTOR -->
         <div id="calPeriod">
           <select id="calMonth"></select>
           <input type="number" id="calYear">
@@ -60,6 +62,8 @@
           <input id="evtDel" type="button" value="Delete">
           <input id="evtSave" type="submit" value="Save">
         </form></dialog>
+          </div>
+        </div>
       </div>
 
 
