--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -40,7 +40,7 @@
 
       <div class="container-fluid" style="margin-bottom: 10vh;margin-top: 3vh;">
         <div class="row">
-          <div class="col-11 mx-auto">
+          <div class="col-11 col-md-8 mx-auto">
             <!-- (A) PERIOD SELECTOR -->
         <div id="calPeriod">
           <select id="calMonth"></select>
